try to fix overflow problem

--- a/src/app.css
+++ b/src/app.css
@@ -32,7 +32,8 @@ body {
 	overflow-x: hidden;
 	background-attachment: fixed;
 	background-color: var(--color-bg-1);
-	background-size: 100vw 100dvh;
+	background-size: cover;
+	background-position: center;
 	background-image:
 		radial-gradient(50% 50% at 50% 50%, rgba(255, 255, 255, 0.75) 0%, rgba(255, 255, 255, 0) 100%),
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
